tests/snapshots/snapshot_tests__clean_code.snap
---
source: tests/snapshot_tests.rs
expression: results
---
{
  "path": "clean.py",
  "findings": [],
  "score": 0
}
