tests/snapshots/snapshot_tests__hedging_patterns.snap
---
source: tests/snapshot_tests.rs
expression: results
---
{
  "path": "hedging.py",
  "findings": [
    {
      "file": "hedging.py",
      "line": 11,
      "column": 7,
      "severity": "medium",
      "category": "hedging",
      "message": "Hedging: code acknowledges it''s not production-ready",
      "match_text": "In a real world",
      "pattern_regex": "(?i)in a real.*(app|production|world)"
    },
    {
      "file": "hedging.py",
      "line": 21,
      "column": 5,
      "severity": "medium",
      "category": "stub",
      "message": "Function body contains only 'pass' statement",
      "match_text": "pass",
      "pattern_regex": "pass$"
    }
  ],
  "score": 10
}
