tests/snapshots/snapshot_tests__json_output.snap
---
source: tests/snapshot_tests.rs
expression: results
---
{
  "path": "test.py",
  "findings": [
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder: TODO marker",
      "match_text": "TODO:",
      "pattern_regex": "(?i)\\bTODO\\s*:"
    },
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder: TO DO marker",
      "match_text": "TODO:",
      "pattern_regex": "(?i)\\bTO\\s*DO\\s*:"
    },
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO with implementation note",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)TODO\\s*:?\\s*implement"
    },
    {
      "file": "test.py",
      "line": 3,
      "column": 5,
      "severity": "medium",
      "category": "stub",
      "message": "Function body contains only 'pass' statement",
      "match_text": "pass",
      "pattern_regex": "pass$"
    }
  ],
  "score": 30
}
