tests/snapshots/snapshot_tests__json_output_snapshot.snap
---
source: tests/snapshot_tests.rs
assertion_line: 28
expression: stable_result
---
{
  "path": "test.py",
  "findings": [
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder comment: untracked TODO found",
      "match_text": "TODO:",
      "pattern_regex": "(?i)TODO:"
    },
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO with explicit implementation note",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)TODO: implement"
    },
    {
      "file": "test.py",
      "line": 2,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO implementation marker",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)to.?do:? implement"
    },
    {
      "file": "test.py",
      "line": 3,
      "column": 5,
      "severity": "medium",
      "category": "stub",
      "message": "Function body contains only 'pass' statement",
      "match_text": "pass",
      "pattern_regex": "pass$"
    }
  ],
  "score": 40
}
