tests/snapshots/snapshot_tests__severity_levels.snap
---
source: tests/snapshot_tests.rs
expression: stable_result
---
{
  "path": "severity.py",
  "findings": [
    {
      "file": "severity.py",
      "line": 4,
      "column": 7,
      "severity": "high",
      "category": "placeholder",
      "message": "Placeholder comment: HACK indicates poor solution",
      "match_text": "HACK:",
      "pattern_regex": "(?i)HACK:"
    },
    {
      "file": "severity.py",
      "line": 4,
      "column": 13,
      "severity": "low",
      "category": "placeholder",
      "message": "Meta-comment: unnecessary description of what code is",
      "match_text": "this is a ",
      "pattern_regex": "(?i)THIS IS A "
    },
    {
      "file": "severity.py",
      "line": 4,
      "column": 7,
      "severity": "medium",
      "category": "hedging",
      "message": "Hedging: apologetic comment - fix the issue instead of apologizing",
      "match_text": "HACK",
      "pattern_regex": "(?i)\\b(sorry|hack|hacky|ugly|bad|terrible|awful|gross|yuck|forgive|quick.?and.?dirty)\\b"
    },
    {
      "file": "severity.py",
      "line": 5,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder comment: FIXME indicates incomplete work",
      "match_text": "FIXME:",
      "pattern_regex": "(?i)FIXME:"
    },
    {
      "file": "severity.py",
      "line": 6,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder comment: untracked TODO found",
      "match_text": "TODO:",
      "pattern_regex": "(?i)TODO:"
    },
    {
      "file": "severity.py",
      "line": 6,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO with explicit implementation note",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)TODO: implement"
    },
    {
      "file": "severity.py",
      "line": 6,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO implementation marker",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)to.?do:? implement"
    },
    {
      "file": "severity.py",
      "line": 7,
      "column": 5,
      "severity": "medium",
      "category": "stub",
      "message": "Function body contains only 'pass' statement",
      "match_text": "pass",
      "pattern_regex": "pass$"
    }
  ],
  "score": 66
}
