tests/snapshots/snapshot_tests__stub_patterns.snap
---
source: tests/snapshot_tests.rs
expression: results
---
{
  "path": "stub.py",
  "findings": [
    {
      "file": "stub.py",
      "line": 3,
      "column": 7,
      "severity": "critical",
      "category": "stub",
      "message": "Stub: code explicitly not implemented",
      "match_text": "not implement",
      "pattern_regex": "(?i)not\\s*implement",
      "source_line": "    # not implemented yet",
      "context_before": "def not_implemented_function():",
      "context_after": "    raise NotImplementedError"
    },
    {
      "file": "stub.py",
      "line": 16,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder: TODO marker",
      "match_text": "TODO:",
      "pattern_regex": "(?i)\\bTODO\\s*:",
      "source_line": "    # TODO: implement",
      "context_before": "",
      "context_after": "    pass"
    },
    {
      "file": "stub.py",
      "line": 16,
      "column": 7,
      "severity": "medium",
      "category": "placeholder",
      "message": "Placeholder: TO DO marker",
      "match_text": "TODO:",
      "pattern_regex": "(?i)\\bTO\\s*DO\\s*:",
      "source_line": "    # TODO: implement",
      "context_before": "",
      "context_after": "    pass"
    },
    {
      "file": "stub.py",
      "line": 16,
      "column": 7,
      "severity": "high",
      "category": "stub",
      "message": "Stub: TODO with implementation note",
      "match_text": "TODO: implement",
      "pattern_regex": "(?i)TODO\\s*:?\\s*implement",
      "source_line": "    # TODO: implement",
      "context_before": "",
      "context_after": "    pass"
    },
    {
      "file": "stub.py",
      "line": 4,
      "column": 5,
      "severity": "critical",
      "category": "stub",
      "message": "NotImplementedError stub detected",
      "match_text": "raise NotImplementedError",
      "pattern_regex": "raise NotImplementedError"
    },
    {
      "file": "stub.py",
      "line": 17,
      "column": 5,
      "severity": "medium",
      "category": "stub",
      "message": "Function body contains only 'pass' statement",
      "match_text": "pass",
      "pattern_regex": "pass$"
    }
  ],
  "score": 130
}
